--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -25,5 +25,9 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Post reports as comments in GitHub PRs
-          cat results.txt >> report.md
+          cat metrics.txt >> report.md
+          cml publish plot.png --md >> report.md
           cml send-comment report.md
+          cat metrics.txt >> README.md
+          cml publish plot.png --md >> README.md
+          cml send-comment README.md
